{
    "name": "GameInputActions",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "4fa66429-b31e-4a08-989b-de72570506c4",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "18a088f5-fb4d-4534-ac4d-388473c5b175",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SwitchToDrone",
                    "type": "Button",
                    "id": "10968b37-c082-438d-a2fe-1b907c537a4c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "d9578e23-912c-43b5-8f7b-98ea1966ff1f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d4b43431-bfb0-4c00-93fd-04ca0cb8ffc8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "fe0ac25f-13ee-4749-87aa-4083f4c6dd82",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "45d22a04-c66b-47e6-a454-479a6783264d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "22655d0f-17e4-46df-9817-81d39bd96db7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "bfcfe988-d651-4f70-b979-6ef3d31e018b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "797cc4f7-3aeb-41b5-9627-bf1c11d1db58",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5d7d3a3b-a11a-4566-9bb1-cd2f30993b0c",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "20204d10-e5db-49f3-b51f-80783256b275",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b119870b-8d5f-4b07-882b-aa18d47a3597",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "353b8e05-d118-4bb9-bbe8-78f832f4a38f",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchToDrone",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "General",
            "id": "13b073fd-5bfe-4350-a9c9-0f1fd3188834",
            "actions": [
                {
                    "name": "Ekey",
                    "type": "Button",
                    "id": "5ac3d3cf-49f4-45e4-8825-3991f2b3c0c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Esckey",
                    "type": "Button",
                    "id": "87d35050-f8ac-4235-b1cf-b69f2adb537a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2dc9fa6d-f1d6-4f14-8d6c-8f3f7f1fde34",
                    "path": "<Keyboard>/e",
                    "interactions": "Hold(duration=10,pressPoint=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Ekey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85277c60-542a-416d-80c6-975ae1da0240",
                    "path": "<Keyboard>/z",
                    "interactions": "Hold(duration=10)",
                    "processors": "",
                    "groups": "",
                    "action": "Esckey",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Drone",
            "id": "82246c16-689a-4834-bb3b-4e90fd132113",
            "actions": [
                {
                    "name": "Rotation",
                    "type": "PassThrough",
                    "id": "51a57afa-fa62-459f-b0a5-595c81a4eb74",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchToPlayer",
                    "type": "Button",
                    "id": "8d71bff5-a5c2-4cfa-b28a-a8ba43db2737",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Tilt",
                    "type": "Value",
                    "id": "7e0e6cda-00f8-40d3-be4f-ba41b23deb3d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SpaceKey",
                    "type": "Button",
                    "id": "e07f6d73-4c43-4975-ac36-6d56c7f19efe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "VKey",
                    "type": "Button",
                    "id": "825d72ac-215a-44f6-b8d5-8fddfcd9b78d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "c29c2788-b52f-48e4-8aed-a4ac836da0e9",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c5e5b77a-e9e4-44f5-b2ba-d80d62e1cdb5",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c24b588d-2216-4f61-ba40-553f3efa4c98",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f7644a8d-1b21-4e62-bff3-749cfabaed0f",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchToPlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "cdaac401-1cc8-4599-9710-5b9c99460bda",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tilt",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2045c091-bc32-42ed-99eb-5f84d614337c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tilt",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a91d5825-186c-46ec-a5f3-3868353201fc",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tilt",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "831a4a20-be14-4b21-8362-f67ed23e0f6e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tilt",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f129c376-a5a3-4caa-bb7f-27f30046b3a7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tilt",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3f5cead5-48b5-4cde-8917-176bbb25bc3f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpaceKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38c82eaa-6d5d-47fb-a4e3-9cf6d1a7be86",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}